--- a/.classpath
+++ b/.classpath
@@ -6,9 +6,14 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Genesys/Documents/BackEnd-Java/LivePT/Jars/c3p0-0.9.5.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Genesys/Documents/BackEnd-Java/LivePT/Jars/jcalendar-1.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Genesys/Documents/BackEnd-Java/LivePT/Jars/mchange-commons-java-0.2.16.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Genesys/Documents/BackEnd-Java/LivePT/Jars/mysql-connector-java-8.0.17.jar"/>
+	<classpathentry kind="lib" path="E:/WebDeveloment/lib/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="E:/WebDeveloment/lib/jgoodies-common-1.2.0.jar"/>
+	<classpathentry kind="lib" path="E:/WebDeveloment/lib/jgoodies-looks-2.4.1.jar"/>
+	<classpathentry kind="lib" path="E:/WebDeveloment/lib/junit-4.6.jar"/>
+	<classpathentry kind="lib" path="E:/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar"/>
+	<classpathentry kind="lib" path="E:/LIBRERIAS JAVA/JARS/c3p0-0.9.5.4.jar"/>
+	<classpathentry kind="lib" path="E:/LIBRERIAS JAVA/JARS/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="E:/LIBRERIAS JAVA/JARS/mchange-commons-java-0.2.16.jar"/>
+	<classpathentry kind="lib" path="E:/LIBRERIAS JAVA/JARS/mysql-connector-j-8.0.32.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
